--- a/packages/custom/arduino/public/views/index.html
+++ b/packages/custom/arduino/public/views/index.html
@@ -1,27 +1,56 @@
-<div class="" data-ng-controller="ArduinoController">
-  <h1>Example view from your new awesome package</h1>
-  <h2>Package: {{package.name}}</h2>
-  <ol>
-    <li>
-      <a href="arduino/example/anyone">Server route that anyone can access</a>
-    </li>
-    <li>
-      <a href="arduino/example/auth">Server route that requires authentication</a>
-    </li>
-    <li>
-      <a href="arduino/example/admin">Server route that requires admin user</a>
-    </li>
-    <li>
-      <a href="arduino/example/render">Raw Html rendering example from using swig</a>
-    </li>
-  </ol>
-  <h3><img src="/arduino/assets/img/logo.png" /></h3>
-  </br>
-  <p class="alert alert-info">You can find your package in /packages/arduino</p>
-  </br>
-  <p class="alert alert-warning">MEAN versions prior to 0.3.2 will be in /node_modules/arduino</p>
-  </br>
-  <h3><a href="http://www.mean.io/#!/docs">Documentation</a></h3>
-  </br>
-</div>
+<div data-ng-controller="ArduinoController">
+    <div class="row">
+        <div class="col-sm-12">
+            <strong>Arduino Status: {{ status }} <span data-ng-if="arduinoStatus.connectionAttempts > 0"> (Attempt #{{arduinoStatus.connectionAttempts}})</span></strong>
 
+            <div class="jumbotron text-center">
+                <h1 class="title">{{ status }}</h1>
+            </div>
+        </div>
+
+    </div>
+
+    <ul class="nav nav-tabs">
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="arduino">Arduino Main</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="arduino.history">History</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="arduino.serialMonitor">Serial Monitor</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="arduino.settings">Settings</a></li>
+    </ul>
+
+
+    <div data-ui-view>
+        <div class="row">
+            <div class="col-sm-8">
+                <h3>Pending Commands:</h3>
+                <table class="table">
+                    <tr>
+                        <th>Type</th>
+                        <th>Command</th>
+                        <th>Attempts</th>
+                        <th>Completed</th>
+                        <th>Created</th>
+                    </tr>
+                    <tr data-ng-repeat="task in pendingTasks | limitTo : 10">
+                        <td>{{ task.type }}</td>
+                        <td>{{ task.command }}</td>
+                        <td>{{ task.attempts }}</td>
+                        <td>{{ task.completed }}</td>
+                        <td>{{ task.created  | date:'medium' }}</td>
+                    </tr>
+                </table>
+
+            </div>
+            <div class="col-sm-4">
+                <h3>Stats:</h3>
+                <dl>
+                    <dt>Pending Requests</dt>
+                    <dd>{{ pendingTasks.length }}</dd>
+                    <dt>Serial Port</dt>
+                    <dd>{{ port }}</dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+
+
+</div>
