--- a/packages/custom/arduino/public/views/arduino.settings.html
+++ b/packages/custom/arduino/public/views/arduino.settings.html
@@ -1,31 +1,3 @@
-<div data-ng-controller="ArduinoController">
-    <div class="row">
-        <div class="col-sm-12">
-            <strong>Arduino Status:</strong>
-
-            <div class="jumbotron text-center">
-                <h4>CONNECTED</h4>
-            </div>
-        </div>
-
-    </div>
-    <div data-ui-view="content">
-        test
-    </div>
-    <div class="row">
-        <div class="col-sm-8">
-            <h3>Pending Commands:</h3>
-
-        </div>
-        <div class="col-sm-4">
-            <h3>Stats:</h3>
-            <dl>
-                <dt>Pending Requests</dt>
-                <dd>49024</dd>
-                <dt>Serial Port</dt>
-                <dd>{{ port }}</dd>
-            </dl>
-        </div>
-    </div>
-
+<div>
+    <h2>Arduino Settings</h2>
 </div>
