--- a/packages/custom/lights/public/views/index.html
+++ b/packages/custom/lights/public/views/index.html
@@ -1,27 +1,25 @@
-<div class="" data-ng-controller="LightsController">
-  <h1>Example view from your new awesome package</h1>
-  <h2>Package: {{package.name}}</h2>
-  <ol>
-    <li>
-      <a href="lights/example/anyone">Server route that anyone can access</a>
-    </li>
-    <li>
-      <a href="lights/example/auth">Server route that requires authentication</a>
-    </li>
-    <li>
-      <a href="lights/example/admin">Server route that requires admin user</a>
-    </li>
-    <li>
-      <a href="lights/example/render">Raw Html rendering example from using swig</a>
-    </li>
-  </ol>
-  <h3><img src="/lights/assets/img/logo.png" /></h3>
-  </br>
-  <p class="alert alert-info">You can find your package in /packages/lights</p>
-  </br>
-  <p class="alert alert-warning">MEAN versions prior to 0.3.2 will be in /node_modules/lights</p>
-  </br>
-  <h3><a href="http://www.mean.io/#!/docs">Documentation</a></h3>
-  </br>
-</div>
+<div data-ng-controller="LightsController">
 
+    <div class="row">
+        <div class="jumbotron">
+            <h1 class="title">
+                Lights
+            </h1>
+        </div>
+    </div>
+
+    <ul class="nav nav-tabs">
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights">Lights Main</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.tanks">Tanks</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.schedule">Schedule</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.demo">Demo</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights   .settings">Settings</a></li>
+    </ul>
+
+
+    <div data-ui-view>
+        Main View
+    </div>
+
+
+</div>
