--- a/packages/custom/lights/public/views/index.html
+++ b/packages/custom/lights/public/views/index.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="LightsController">
+<div data-ng-controller="LightsController" class="lights">
 
     <div class="row">
         <div class="jumbotron">
@@ -10,10 +10,10 @@
 
     <ul class="nav nav-tabs">
         <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights">Lights Main</a></li>
-        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.tanks">Tanks</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.fixtures">Fixtures</a></li>
         <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.schedule">Schedule</a></li>
         <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.demo">Demo</a></li>
-        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights   .settings">Settings</a></li>
+        <li role="presentation" ui-sref-active-eq="active"><a ui-sref="lights.settings">Settings</a></li>
     </ul>
 
 
